@@ -37,6 +37,7 @@ Patches:
     Diego Elio Petteno (autoconf patch for 64-bit safe code)
     Jon Kowal (deadlock on thread cancellation fix)
     Jerry James (cleanup compiler warnings)
+    Martin Willers (rename check's internal list API to start with check_)
 
 Anybody who has contributed code to Check or Check's build system is
 considered an author.  Send patches to this file to 
