@@ -22,12 +22,12 @@ START_TEST(test_init_logging_subunit)
   Suite *s = suite_create("Suite");
   SRunner *sr = srunner_create(s);
   srunner_init_logging(sr, CK_SUBUNIT);
-  list_front (sr->loglst);
-  ck_assert_msg (!list_at_end(sr->loglst), "No entries in log list");
-  first_log = list_val(sr->loglst);
+  check_list_front (sr->loglst);
+  ck_assert_msg (!check_list_at_end(sr->loglst), "No entries in log list");
+  first_log = check_list_val(sr->loglst);
   ck_assert_msg (first_log != NULL, "log is NULL");
-  list_advance(sr->loglst);
-  ck_assert_msg(list_at_end(sr->loglst), "More than one entry in log list");
+  check_list_advance(sr->loglst);
+  ck_assert_msg(check_list_at_end(sr->loglst), "More than one entry in log list");
   ck_assert_msg(first_log->lfun == subunit_lfun,
               "Log function is not the subunit lfun.");
   srunner_end_logging(sr);
